--- a/jakc_queue/views/report_queue_receipt_templates.xml
+++ b/jakc_queue/views/report_queue_receipt_templates.xml
@@ -15,7 +15,7 @@
 
                     <!-- Set page size here: A5, A4 or A3 -->
                     <!-- Set also "landscape" if you need -->
-                    <style>@page { size: A5 landscape }</style>
+                    <style>@page { size: A5 portrait }</style>
 
                     <!-- Custom styles for this document -->
                     <link href='https://fonts.googleapis.com/css?family=Tangerine:700' rel='stylesheet' type='text/css'/>
@@ -40,7 +40,7 @@
 
                 <!-- Set "A5", "A4" or "A3" for class name -->
                 <!-- Set also "landscape" if you need -->
-                <body class="A5 landscape">
+                <body class="A5 portrait">
 
                     <!-- Each sheet element should have the class "sheet" -->
                     <!-- "padding-**mm" is optional: you can set 10, 15, 20 or 25 -->
