--- a/jakc_queue/views/report_queue_receipt_templates.xml
+++ b/jakc_queue/views/report_queue_receipt_templates.xml
@@ -8,10 +8,10 @@
 
                     <link rel="stylesheet" href="/jakc_queue/static/src/css/bootstrap/dist/css/bootstrap.min.css"/>
                     <!-- Normalize or reset CSS with your favorite library -->
-                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/js/normalize.css"/>
 
                     <!-- Load paper.css for happy printing -->
-                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.4.1/paper.css"/>
+                    <link rel="stylesheet" href="/jakc_queue/static/src/js/paper.css"/>
 
                     <!-- Set page size here: A5, A4 or A3 -->
                     <!-- Set also "landscape" if you need -->
