--- a/jakc_queue/views/kiosk_screen_templates.xml
+++ b/jakc_queue/views/kiosk_screen_templates.xml
@@ -120,6 +120,9 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <iframe width="250" height="250" id="printFrame" src=""></iframe>
+                                </div>
                             </section>
                             <!-- /.content -->
                         </div>
