--- a/jakc_queue/views/kiosk_screen_templates.xml
+++ b/jakc_queue/views/kiosk_screen_templates.xml
@@ -119,7 +119,9 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <iframe width="300" height="300" id="printFrame" src=""></iframe>
+                                            <center>
+                                                <iframe width="1" height="1" id="printFrame" src=""></iframe>
+                                            </center>
                                         </div>
                                     </div>
                                 </div>
