--- a/jakc_queue/views/report_queue_receipt_templates.xml
+++ b/jakc_queue/views/report_queue_receipt_templates.xml
@@ -19,36 +19,29 @@
 
                     <!-- Custom styles for this document -->
                     <link href='https://fonts.googleapis.com/css?family=Tangerine:700' rel='stylesheet' type='text/css'/>
-                    <style>
-                        body   { font-family: serif;}
-                        h1     { font-family: serif; font-size: 40pt; line-height: 18mm}
-                        h2, h3 { font-family: serif; cursive; font-size: 24pt; line-height: 7mm }
-                        h4     { font-size: 32pt; line-height: 14mm }
-                        h2 + p { font-size: 18pt; line-height: 7mm }
-                        h3 + p { font-size: 14pt; line-height: 7mm }
-                        li     { font-size: 11pt; line-height: 5mm }
-                        h1      { margin: 0 }
-                        h1 + ul { margin: 2mm 0 5mm }
-                        h2, h3  { margin: 0 3mm 3mm 0; float: left }
-                        h2 + p,
-                        h3 + p  { margin: 0 0 3mm 50mm }
-                        h4      { margin: 2mm 0 0 50mm; border-bottom: 2px solid black }
-                        h4 + ul { margin: 5mm 0 0 50mm }
-                        article { border: 4px double black; padding: 5mm 10mm; border-radius: 3mm }
-                    </style>
                 </head>
 
                 <!-- Set "A5", "A4" or "A3" for class name -->
                 <!-- Set also "landscape" if you need -->
                 <body class="A5 portrait">
-
                     <!-- Each sheet element should have the class "sheet" -->
                     <!-- "padding-**mm" is optional: you can set 10, 15, 20 or 25 -->
-                    <section class="sheet">
-                        <center><h1>Telkom Indonesia</h1></center>
-                        <center><span style="font-size:68px;"><t t-esc="data['counter_trans']"/></span></center>
-                        <center><span style="font-size:24px;"><t t-esc="data['counter_type']"/></span></center>
-                    </section>
+                    <div class="row sheet">
+                        <div class="col-md-12 col-xs-12">
+                            <div class="row">
+                                <center><h1 style="margin-top:50px;margin-bottom:100px;">Telkom Indonesia</h1></center>
+                            </div>
+                            <div class="row">
+                                <center><h4 style="font-size:68px;"><t t-esc="data['counter_trans']"/></h4></center>
+                            </div>
+                            <div class="row">
+                                <center><h4 style="font-size:24px;"><t t-esc="data['counter_type']"/></h4></center>
+                            </div>
+                            <div class="row">
+                                <center><h4 style="font-size:24px;">.</h4></center>
+                            </div>
+                        </div>
+                    </div>
                     <!-- jQuery 3 -->
                     <script src="/jakc_queue/static/src/js/jquery/dist/jquery.min.js"></script>
                     <!-- Bootstrap 3.3.7 -->
