--- a/jakc_queue/views/report_queue_receipt_templates.xml
+++ b/jakc_queue/views/report_queue_receipt_templates.xml
@@ -9,10 +9,8 @@
                     <link rel="stylesheet" href="/jakc_queue/static/src/css/bootstrap/dist/css/bootstrap.min.css"/>
                     <!-- Normalize or reset CSS with your favorite library -->
                     <link rel="stylesheet" href="/jakc_queue/static/src/js/normalize.css"/>
-
                     <!-- Load paper.css for happy printing -->
                     <link rel="stylesheet" href="/jakc_queue/static/src/js/paper.css"/>
-
                     <!-- Set page size here: A5, A4 or A3 -->
                     <!-- Set also "landscape" if you need -->
                     <style>@page { size: A5 portrait }</style>
@@ -28,16 +26,16 @@
                     <!-- "padding-**mm" is optional: you can set 10, 15, 20 or 25 -->
                     <div class="row sheet">
                         <div class="col-md-12 col-xs-12">
-                            <div class="row">
+                            <div class="row text-center">
                                 <center><h1 style="margin-top:50px;margin-bottom:100px;">Telkom Indonesia</h1></center>
                             </div>
-                            <div class="row">
-                                <center><h4 style="font-size:68px;"><t t-esc="data['counter_trans']"/></h4></center>
+                            <div class="row text-center">
+                                <h4 style="font-size:68px;"><t t-esc="data['counter_trans']"/></h4>
                             </div>
-                            <div class="row">
+                            <div class="row text-center">
                                 <center><h4 style="font-size:24px;"><t t-esc="data['counter_type']"/></h4></center>
                             </div>
-                            <div class="row">
+                            <div class="row text-center">
                                 <center><h4 style="font-size:24px;">.</h4></center>
                             </div>
                         </div>
