--- a/jakc_queue/report/report_queue_receipt_view.xml
+++ b/jakc_queue/report/report_queue_receipt_view.xml
@@ -42,6 +42,12 @@
                 <div class="row">
                     <span><![CDATA[&nbsp;]]></span>
                 </div>
+                 <div class="row">
+                    <span><![CDATA[&nbsp;]]></span>
+                </div>
+                 <div class="row">
+                   <strong><span style="font-size:24px">...</span></strong>
+                </div>
             </div>
         </template>
 
