--- a/jakc_queue/report/report_queue_receipt_view.xml
+++ b/jakc_queue/report/report_queue_receipt_view.xml
@@ -6,7 +6,7 @@
                  <div class="row">
                     <span><![CDATA[&nbsp;]]></span>
                 </div>
-                <div class="text-center">
+                <div class="text-center" style="text-align: center;">
                     <img t-if="res_company.logo" t-att-src="'data:image/png;base64,%s' %res_company.logo" width="200px;"/>
                 </div>
                 <div class="row">
