--- a/jakc_queue/report/report_queue_receipt_view.xml
+++ b/jakc_queue/report/report_queue_receipt_view.xml
@@ -9,7 +9,7 @@
                 <div class="text-center" style="text-align: center;">
                     <img t-if="res_company.logo" t-att-src="'data:image/png;base64,%s' %res_company.logo" width="200px;"/>
                 </div>
-                <div class="row">
+                <div class="row" style="text-align: center;">
                     <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d-%m-%Y %H:%M')"/>
                 </div>
                 <div class="row" style="text-align: center;">
